🐳 [chore] Update docker-compose command to include server name
- Modified `command` in `docker-compose.yml` to include `--server_name 0.0.0.0`
- Ensures the server is accessible on all network interfaces

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
               count: 1
               capabilities: [ gpu ]
     tty: true
-    command: python3 app.py
+    command: python3 app.py --server_name 0.0.0.0
